[metadata]
name = mode-streaming
version = attr: mode.__version__
author = attr: mode.__author__
author_email = attr: mode.__contact__
url = attr: mode.__homepage__
description = attr: mode.__doc__
long_description = file: README.rst
keywords = asyncio, service, bootsteps, graph, coroutine
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Framework :: AsyncIO
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:

[tool:pytest]
minversion=2.8
testpaths = tests/unit tests/functional
python_classes = test_*

[wheel]
universal = 1

[mypy]
# --strict but not --implicit-optional
python_version = 3.8
cache_fine_grained = True
check_untyped_defs = True
disallow_any_decorated = False
disallow_any_expr = False
disallow_any_generics = False
disallow_any_unimported = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
follow_imports = normal
ignore_missing_imports = True
implicit_reexport = False
no_implicit_optional = False
pretty = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
strict_equality = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
